--- a/DjangoProject/requirements.txt
+++ b/DjangoProject/requirements.txt
@@ -1,4 +1,11 @@
 asgiref==3.5.2
+beautifulsoup4==4.11.1
 Django==4.0.5
+django-bootstrap-v5==1.0.11
+django-phonenumber-field==6.3.0
+django-phonenumbers==1.0.1
+phonenumbers==8.12.50
+psycopg2==2.9.3
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 tzdata==2022.1
