--- a/DjangoProject/Files/config3.json
+++ b/DjangoProject/Files/config3.json
@@ -3,7 +3,7 @@
     "content": [   
         {
             "field": "related",
-            "xPath": "//div[contains(@data-cel-widget,'MAIN-TEXT_REFORMULATION-50')]//span/div/div/div/div",
+            "xPath": "//div[contains(@data-cel-widget,'MAIN-TEXT_REFORMULATION')]//span/div/div/div/div",
             "is_parent": "True"
         }, 
         {
@@ -12,21 +12,10 @@
             "parent_field": "related"
         },
         {
-            "field": "rating",
-            "xPath": "//i",
-            "parent_field": "popular"
+            "field": "link",
+            "xPath": "//a/@href",
+            "parent_field": "related"
 
-        },
-        {
-            "field": "rating_count",
-            "xPath": "//span/a/span",
-            "parent_field": "popular"
-
-        },
-        {
-            "field": "price",
-            "xPath": "//span[contains(@class,'a-price')][not(contains(@data-a-strike,'true'))]/span[contains(@class,'a-offscreen')]",
-            "parent_field": "popular"
         }
     ]    
 }]
